improve null safety